--- a/popup.css
+++ b/popup.css
@@ -17,22 +17,12 @@ h1 {
   margin-bottom: 20px;
 }
 
-.button2 {
-  background-color: #4CAF50;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-  border-radius: 12px;
-}
 
-button {
-  background-color: #4CAF50;
+
+.scrape-button{background-color: #0080e4 !important;}
+
+.button {
+  background-color: #fe7a2b;
   color: white;
   padding: 15px 32px;
   border: none;
